--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "html"
+name = "course-work-oop"
 version = "0.1.0"
 description = ""
 authors = ["Alexandr-lab-del <gordon675843@mail.ru>"]
@@ -7,8 +7,46 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
+pytest = "^8.3.2"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.1.1"
+
+
+[tool.poetry.group.lint.dependencies]
+mypy = "^1.11.2"
+black = "^24.8.0"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 119
+exclude = '''
+(
+  /(
+      \.eggs
+    | \.git
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | dist
+  )/
+  | foo.py
+)
+'''
+
+[tool.isort]
+line_length = 119
+
+[tool.mypy]
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+exclude = 'venv'
